# RTIOW_RTNW-Notes

./: CMakeLists.txt  README.md  binary.ppm  main.cc  update.gitignore
src/: AABB.h  BVH.h  ConstantMedium.h  Image.h  Interval.h  Material.h  Object.h  ObjectList.h  Perlin.h  Quad.h  Renderer.h  Scene.h  Sphere.h  Texture.h  Vector3d.h  color.h  global.h  main.cc  ray.h  vec3d.h
